--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "autoprefixer": "^10.2.3",
+    "postcss": "^8.2.4",
     "tailwindcss": "^2.0.2"
   }
 }
