--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
-  "name": "wigi home",
-  "version": "0.0.1",
+  "name": "wigi-house",
+  "version": "1.0.0",
   "description": "",
-  "keywords": "",
-  "license": "",
-  "author": "",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "autoprefixer": "^10.2.3",
-    "postcss": "^8.2.4",
-    "tailwindcss": "^2.0.2"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ditshej/wigi-home.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ditshej/wigi-home/issues"
+  },
+  "homepage": "https://github.com/ditshej/wigi-home#readme",
+  "devDependencies": {
+    "laravel-mix": "^6.0.10"
   }
 }
