--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "autoprefixer": "^10.2.3",
     "laravel-mix": "^6.0.10",
+    "mix-tailwindcss": "^1.3.0",
     "postcss": "^8.2.4",
     "tailwindcss": "^2.0.2"
   }
