--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	"dependencies": {
 		"@tailwindcss/aspect-ratio": "^0.2.0",
 		"@tailwindcss/forms": "^0.2.1",
-		"fullcalendar": "^5.5.1"
+		"fullcalendar": "^5.5.1",
+		"validate.js": "^0.13.1"
 	}
 }
