--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@tailwindcss/aspect-ratio": "^0.2.0",
+        "@tailwindcss/forms": "^0.3.2",
+        "autoprefixer": "^10.2.5",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.2.10",
+        "tailwindcss": "^2.1.1"
+    },
+    "dependencies": {
+        "@fullcalendar/core": "^5.6.0",
+        "@fullcalendar/daygrid": "^5.6.0",
+        "@fullcalendar/google-calendar": "^5.6.0",
+        "alpinejs": "^2.8.2"
     }
 }
