--- a/resources/blueprints/collections/pages/pages.yaml
+++ b/resources/blueprints/collections/pages/pages.yaml
@@ -53,6 +53,20 @@ sections:
           icon: link
           listable: hidden
           instructions_position: above
+      -
+        handle: header_img
+        field:
+          mode: grid
+          restrict: false
+          allow_uploads: true
+          show_filename: true
+          display: Bild
+          type: assets
+          icon: assets
+          listable: hidden
+          instructions_position: above
+          container: images
+          max_files: 1
   main:
     display: Main
     fields:
