--- a/resources/blueprints/collections/pages/pages.yaml
+++ b/resources/blueprints/collections/pages/pages.yaml
@@ -92,16 +92,16 @@ sections:
               fields:
                 -
                   import: quote
-            section_img_left:
+            img_left:
               display: 'Bild links'
               fields:
                 -
-                  import: section_img_left
-            section_img_right:
+                  import: img_left
+            img_right:
               display: 'Bild rechts'
               fields:
                 -
-                  import: section_img_right
+                  import: img_right
   sidebar:
     display: Sidebar
     fields:
