--- a/resources/blueprints/forms/booking.yaml
+++ b/resources/blueprints/forms/booking.yaml
@@ -5,16 +5,11 @@ sections:
       -
         handle: date_from
         field:
-          mode: single
-          time_enabled: false
-          time_required: false
-          full_width: false
-          inline: false
-          columns: 1
-          rows: 1
+          input_type: date
+          antlers: false
           display: 'Datum von'
-          type: date
-          icon: date
+          type: text
+          icon: text
           listable: hidden
           instructions_position: above
           validate:
@@ -22,16 +17,11 @@ sections:
       -
         handle: date_to
         field:
-          mode: single
-          time_enabled: false
-          time_required: false
-          full_width: false
-          inline: false
-          columns: 1
-          rows: 1
-          display: 'Datum bis'
-          type: date
-          icon: date
+          input_type: date
+          antlers: false
+          display: '... bis ...'
+          type: text
+          icon: text
           listable: hidden
           instructions_position: above
           validate:
