--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@fullcalendar/core": "^5.6.0",
         "@fullcalendar/daygrid": "^5.6.0",
         "@fullcalendar/google-calendar": "^5.6.0",
-        "alpinejs": "^2.8.2"
+        "alpinejs": "^2.8.2",
+        "glightbox": "^3.1.0"
     }
 }
