--- a/resources/fieldsets/action.yaml
+++ b/resources/fieldsets/action.yaml
@@ -10,6 +10,7 @@ fields:
       icon: text
       listable: hidden
       instructions_position: above
+      width: 66
   -
     handle: action_url
     field:
@@ -18,3 +19,4 @@ fields:
       icon: link
       listable: hidden
       instructions_position: above
+      width: 33
