--- a/resources/fieldsets/quote.yaml
+++ b/resources/fieldsets/quote.yaml
@@ -32,6 +32,7 @@ fields:
       icon: text
       listable: hidden
       instructions_position: above
+      width: 50
   -
     handle: quote_author_note
     field:
@@ -42,3 +43,4 @@ fields:
       icon: text
       listable: hidden
       instructions_position: above
+      width: 50
