--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@fullcalendar/core": "^5.6.0",
         "@fullcalendar/daygrid": "^5.6.0",
         "@fullcalendar/google-calendar": "^5.6.0",
+        "@fullcalendar/list": "^5.10.1",
         "alpinejs": "^2.8.2",
         "glightbox": "^3.1.0"
     }
