emails for form changed

--- a/resources/forms/booking.yaml
+++ b/resources/forms/booking.yaml
@@ -1,10 +1,10 @@
 title: Mietanfrage
 email:
   -
-    to: weruffy@hotmail.com
-    from: ditshej@gmail.com
-    reply_to: ditshej@gmail.com
+    to: ditshej@gmail.com
+    from: wigi.home.obersaxen@gmail.com
+    reply_to: wigi.home.obersaxen@gmail.com
     subject: 'Danke für deine Mietanfrage'
   -
-    to: ditshej@gmail.com
-    subject: 'Mietanfrage wigi-home.ch'
+    to: wigi.home.obersaxen@gmail.com
+    subject: 'Mietanfrage wigis-home.ch'
