--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "laravel/laravel",
+    "name": "Wigis Home",
     "type": "project",
-    "description": "The Laravel Framework.",
+    "description": "A webpage for my uncle.",
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
