--- a/users/hallo@wigis-home.ch.yaml
+++ b/users/hallo@wigis-home.ch.yaml
@@ -1,7 +1,7 @@
-name: Raphi
+name: Wigi
 super: true
 id: 4a8574ee-bf61-414d-8bdc-0f912a4261e5
-password_hash: $2y$10$6YeSwRpdZX9ylynERuaShOSE7JfbvsdLUKB/Ck/qxPa3CJO7RfcGK
+password_hash: $2y$10$byW.Qoa0PIvD859aGp9vduXCpu2TFBhSPJgOxPFI.Jyix57XDgy0y
 preferences:
   assets:
     images:
