--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "wigishome",
+    "name": "ditshej/wigishome",
     "type": "project",
     "description": "A webpage for my uncle.",
     "keywords": ["framework", "laravel"],
