--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,18 @@
 /node_modules
 /public/hot
 /public/storage
+/public/css
+/public/vendor/statamic
+/public/js
 /storage/*.key
+/storage/statamic/users
+/storage/debugbar/*
+/storage/glide/*
 /vendor
 .env
 .env.backup
+.env.deployed
+.env.local
 .phpunit.result.cache
 docker-compose.override.yml
 Homestead.json
