--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /node_modules
 /public/hot
 /public/storage
+/public/img/containers
 /public/vendor/statamic
 /storage/*.key
 /storage/statamic/users
