update statamic to 3.3.11

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
-        "statamic/cms": "3.2.24"
+        "statamic/cms": "3.3.11"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -57,7 +57,10 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pixelfear/composer-dist-plugin": true
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true
